--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Phaser3 + Parceljs Template</title>
+		<title>Chost Buster</title>
 	</head>
 	<body>
 		<script src="main.js"></script>
